// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`className + conditional styles get full base styles merged onto + shorthand 1`] = `
"const _cn3 = " _bg-blue";
const _cn2 = " _bg-red";
const _cn = " _dsp-flex _ai-stretch _fd-column _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _w-10px  ";
import { Stack } from '@tamagui/core';
export function Test(props) {
  return <div className={concatClassName("" + (_cn + (props.green ? _cn2 : _cn3) + (props.className ? " " + props.className : "")))} />;
}
import { concatClassName } from "@tamagui/helpers";"
`;

exports[`className + conditional styles get full base styles merged onto + shorthand 2`] = `
":root ._dsp-flex{display:flex;}
:root ._ai-stretch{align-items:stretch;}
:root ._fd-column{flex-direction:column;}
:root ._fb-auto{flex-basis:auto;}
:root ._bxs-border-box{box-sizing:border-box;}
:root ._pos-relative{position:relative;}
:root ._mih-0px{min-height:0px;}
:root ._miw-0px{min-width:0px;}
:root ._fs-0{flex-shrink:0;}
:root ._w-10px{width:10px;}
:root ._bg-red{background-color:red;}
:root ._bg-blue{background-color:blue;}"
`;

exports[`conditional styles get full base styles merged onto + shorthand 1`] = `
"const _cn3 = " _bg-blue";
const _cn2 = " _bg-red";
const _cn = " _dsp-flex _ai-stretch _fd-column _fb-auto _bxs-border-box _pos-relative _mih-0px _miw-0px _fs-0 _w-10px  ";
import { Stack } from '@tamagui/core';
export function Test(props) {
  return <div className={concatClassName("" + (_cn + (props.green ? _cn2 : _cn3)))} />;
}
import { concatClassName } from "@tamagui/helpers";"
`;

exports[`conditional styles get full base styles merged onto + shorthand 2`] = `
":root ._dsp-flex{display:flex;}
:root ._ai-stretch{align-items:stretch;}
:root ._fd-column{flex-direction:column;}
:root ._fb-auto{flex-basis:auto;}
:root ._bxs-border-box{box-sizing:border-box;}
:root ._pos-relative{position:relative;}
:root ._mih-0px{min-height:0px;}
:root ._miw-0px{min-width:0px;}
:root ._fs-0{flex-shrink:0;}
:root ._w-10px{width:10px;}
:root ._bg-red{background-color:red;}
:root ._bg-blue{background-color:blue;}"
`;
